# daily-news-test

./: .gitignore  README.md  SCHEDULER.md  pyproject.toml  requirements.txt
briefings/: 2026-04-28.md  smoke-2026-04-28.md
config/: sources.toml  sources.toml.bak-20260427-172531
scripts/: cron_collect.py
src/briefing_collector/: collector.py
tests/: test_collector.py  test_event_logging.py
