[project]
name = "daily-briefing"
version = "0.1.0"
description = "RSS/article candidate collector for daily development and economy briefings"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "feedparser==6.0.11",
  "requests==2.32.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
